@@ -1,5 +1,8 @@
 1.4.2 - TBD
 
+* Added rendering for Minecraft 1.11 blocks:
+    * Observer Block
+    * Shulker Box
 * Added scene settings export/import system.
 * It is now possible to temporarily change the view target via the
   render preview context menu. This is useful for autofocus and moving
